Add descriptions for endpoints
