# app/endpoints/student.py
@@ -1,5 +1,5 @@
 from typing import Annotated
-from fastapi import APIRouter, Header, HTTPException
+from fastapi import APIRouter, Header, HTTPException, Depends
 from app.db.entryexit_db import db_get_person_entrances
 from app.db.get_student import get_student_by_token_db
 from app.db.lessons import get_lessons_from_db
@@ -8,13 +8,13 @@ from app.models.group import StudentInfo
 from app.models.lesson import Lessons
 from app.models.student import Student
 from app.tokens.decode import decode_token
-from app.tokens.descriptions import access_token
+from app.tokens.descriptions import access_token, api_key_header
 
 student = APIRouter()
 
 
-@student.get("/entrances", response_model=EnExHistory, description=access_token)
-async def get_entrances(authorization: Annotated[str | None, Header()] = None):
+@student.get("/entrances", response_model=EnExHistory)
+async def get_entrances(authorization: Annotated[str | None, Depends(api_key_header)] = None):
     token = decode_token(authorization)
     if token is None or token['role'] != 'student':
         raise HTTPException(status_code=403, detail='Not enough permissions')
@@ -25,8 +25,8 @@ async def get_entrances(authorization: Annotated[str | None, Header()] = None):
     return response
 
 
-@student.get("/lessons", response_model=Lessons, description=access_token)
-async def get_lessons(authorization: Annotated[str | None, Header()] = None):
+@student.get("/lessons", response_model=Lessons)
+async def get_lessons(authorization: Annotated[str | None, Depends(api_key_header)] = None):
     token = decode_token(authorization)
     if token is None or token['role'] != 'student':
         raise HTTPException(status_code=403, detail='Not enough permissions')
@@ -34,8 +34,8 @@ async def get_lessons(authorization: Annotated[str | None, Header()] = None):
     return response
 
 
-@student.get("/info", response_model=Student, description=access_token)
-async def get_student_info(authorization: Annotated[str | None, Header()] = None):
+@student.get("/info", response_model=Student)
+async def get_student_info(authorization: Annotated[str | None, Depends(api_key_header)] = None):
     token = decode_token(authorization)
     if token is None or token['role'] != 'student':
         raise HTTPException(status_code=403, detail='Not enough permissions')
